--- a/sublime-text/.gitignore
+++ b/sublime-text/.gitignore
@@ -5,3 +5,5 @@ Package\ Control.merged-ca-bundle
 Package\ Control.system-ca-bundle
 Package\ Control.user-ca-bundle
 Package\ Control.cache
+
+oscrypto-ca-bundle.crt
