Used Hack as VS Code font

--- a/vs-code/settings.json
+++ b/vs-code/settings.json
@@ -18,6 +18,8 @@
   },
   "[css]": {
     "editor.tabSize": 2
-  }
+  },
+  "terminal.external.osxExec": "iTerm.app",
+  "editor.fontFamily": "Hack"
 }
 
