--- a/vs-code/settings.json
+++ b/vs-code/settings.json
@@ -25,6 +25,10 @@
   "workbench.colorTheme": "One Monokai",
   "workbench.editor.enablePreview": false,
   "workbench.editor.enablePreviewFromQuickOpen": false,
-  "workbench.panel.defaultLocation": "right"
+  "workbench.panel.defaultLocation": "right",
+  "javascript.updateImportsOnFileMove.enabled": "always",
+  "workbench.activityBar.visible": false,
+  "workbench.sideBar.location": "left",
+  "search.location": "panel"
 }
 
